# skill_fragment_engine

./: .gitignore  Dockerfile  README.md  SDK.md  SPEC.md  da agg.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: CLUSTERING.md  ENCRYPTION.md  SECURITY.md
plugins/examples/: langchain_adapter.py  llamaindex_adapter.py  sentence_transformer_embedding.py
sdks/: README.md
sdks/java/: pom.xml
sdks/javascript/: package.json
sdks/javascript/src/: index.ts
sdks/python/: setup.py
sdks/python/skill_fragment_engine/: __init__.py
skills/: README.md
skills/skill-fragment-engine/: SKILL.md  skill.yaml
src/skill_fragment_engine/: __init__.py  main.py  mcp_main.py  mcp_server.py  store.py
src/skill_fragment_engine/api/: __init__.py  routes.py  schemas.py  standard_api.py
src/skill_fragment_engine/capture/: __init__.py  extractors.py  retrospector.py
src/skill_fragment_engine/core/: __init__.py  config.py  enums.py  exceptions.py  metrics.py  models.py
src/skill_fragment_engine/execution/: __init__.py  adapt_executor.py  engine.py  recompute_executor.py  reuse_executor.py
src/skill_fragment_engine/governance/: __init__.py  decay_manager.py  pruning_scheduler.py  scoring_calculator.py
src/skill_fragment_engine/retrieval/: __init__.py  clustering.py  embedder.py  hasher.py  matcher.py  similarity.py  vector_store.py
src/skill_fragment_engine/services/: __init__.py  anonymization_service.py  audit_service.py  encryption_service.py  feedback_service.py  llm_service.py  plugin_system.py  rbac_service.py  rollback_service.py  sharding_service.py  transfer_learning_service.py  versioning_service.py
tests/: __init__.py  conftest.py
tests/unit/: test_context_comparator.py  test_core_models.py  test_governance.py  test_hasher.py
(+6 files in other folders)
